--- a/assets/base.css
+++ b/assets/base.css
@@ -157,8 +157,9 @@ html, body {
 
 .structure-wrapper section > .item:first-of-type:nth-last-of-type(2):before {
     left: 50%;
-    width: 1px;
-    border: none;
+    width: 0;
+    border-right: none;
+    border-left: 3px solid black;
     background-color: black;
 }
 
@@ -256,9 +257,9 @@ html, body {
     left: -104px;
     width: 100px;
     height: calc(100% + 2px);
-    /*background-color: #003558;*/
-    background-color: transparent;
-    background-image: url(https://ponomarevlad.ru/assets/img/pic.jpeg);
+    background-color: #003558;
+    /*background-color: transparent;*/
+    background-image: url(logo.svg);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -296,18 +297,33 @@ html, body {
 
 .structure-wrapper section.extended-level > .item.assistant.sub-level:before {
     top: -20px;
-    left: calc(-50% - 41px);
-    width: calc(100% + 41px);
+    left: calc(-50% - 42px);
+    width: calc(100% + 42px);
 
-    height: 20px;
+    height: 18px;
     border-right: 1px solid black;
     border-top: 1px solid black;
     background: none;
 }
 
+.structure-wrapper section > .item.assistant.first-after-head.active:not(.sub-level):before {
+    border-right: none;
+    height: 3px;
+}
+
 .structure-wrapper section.extended-level > .item.assistant.sub-level.first-after-head:before {
     left: -40px;
     width: calc(50% + 40px);
+}
+
+.structure-wrapper section.extended-level > .item.assistant.sub-level.first-after-head.active:before {
+    border-top: 3px solid black;
+    border-right: 3px solid black;
+    height: 17px;
+}
+
+.structure-wrapper section > .item.active-child:before {
+    border-left: 3px solid black;
 }
 
 .structure-wrapper .level-wrapper {
@@ -336,7 +352,7 @@ html, body {
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    background-color: rgba(0, 180, 255, 0.3);
+    background-color: rgba(0, 180, 255, 0.7);
     z-index: 1000;
     cursor: pointer;
 }
@@ -443,6 +459,7 @@ html, body {
     width: 100px;
     height: 100px;
     margin-right: 32px;
+    background-color: #003558;
 }
 
 .structure-modal-content > .modal-header .image img {
@@ -537,6 +554,7 @@ html, body {
     margin-right: 30px;
     position: relative;
     overflow: hidden;
+    background-color: #003558;
 }
 
 .structure-modal-content > .modal-body > .manager-item > .image img {
@@ -661,4 +679,32 @@ html, body {
 
 .structure-modal-content > .modal-body > .division-structure > div > div > span {
     color: #A5A5A5;
+}
+
+.structure-page .back-button {
+    display: block;
+    position: fixed;
+    left: 10px;
+    top: 10px;
+    background-color: #003558;
+    padding: 10px 20px;
+    padding-left: 30px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1000000;
+}
+
+.structure-page .back-button:before {
+    display: block;
+    content: '';
+    position: absolute;
+    left: 10px;
+    background-image: url("arrow.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 15px;
+    height: calc(100% - 20px);
+    transform: scaleX(-1);
 }
